<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="yes">Yes</string>
    <string name="no">No</string>

    <string name="user_score">User\nScore</string>
    <string name="not_scored">Not\nScored</string>
    <string name="movie_year_value">(%1$s)</string>

    <string name="default_no">-1</string>

    <string name="title_activity_settings">Settings</string>

    <!-- Setting Preferences -->
    <string name="header_title_appearance">Appearance</string>

    <!-- Theme Preferences -->
    <string name="title_theme">Theme</string>
    <string name="system">System</string>
    <string name="light">Light</string>
    <string name="dark">Dark</string>


    <!-- Setting Content -->
    <string name="header_title_content">Content</string>

    <!-- Include Adult Preferences -->
    <string name="title_include_adult">Include Adult</string>
    <string name="include_adult_on">Movie with adult content will included in search result</string>
    <string name="include_adult_off">Movie with adult content will excluded in search result</string>
    <string name="include_adult_confirmation">This app will contain content suitable only for users aged 18 and over. Please confirm that you are at least 18 years old by clicking the \"I am 18+\" button below.</string>
    <string name="include_adult_yes">I am 18+</string>
    <string name="include_adult_no">No</string>

    <!-- Setting Module -->
    <string name="header_title_module">Module</string>

    <!-- Person Preferences -->
    <string name="title_person_module">Person</string>
    <string name="person_module_on">Person Module Is Installed</string>
    <string name="person_module_off">Person Module Is Not Installed</string>
    <string name="person_module_dialog_message">Are you sure to install Person Module</string>

    <string name="icon">Icon</string>
    <string name="back">back</string>

    <string name="splitinstall_state_unknown">Error with unknows reason</string>
    <string name="splitinstall_state_pending">Initializing</string>
    <string name="splitinstall_state_downloading">Downloading (%1$.2f%%)</string>
    <string name="splitinstall_state_downloaded">Downloaded</string>
    <string name="splitinstall_state_installing">Installing</string>
    <string name="splitinstall_state_installed">Module %1$s Installed</string>
    <string name="splitinstall_state_failed">Installation failed</string>
    <string name="splitinstall_state_canceling">Canceling</string>
    <string name="splitinstall_state_canceled">Installation canceled</string>
    <string name="splitinstall_state_confirmation_fail">Confirmation fail</string>
    <string name="carousel_image_content_description">Image</string>
    <string name="previous">Previous</string>
    <string name="next">Next</string>
</resources>