<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/header_title_appearance">
        <ListPreference
            app:defaultValue="@string/default_no"
            app:entries="@array/theme_entries"
            app:entryValues="@array/theme_values"
            app:key="theme"
            app:title="@string/title_theme"
            app:useSimpleSummaryProvider="true" />
    </PreferenceCategory>

    <PreferenceCategory app:title="@string/header_title_content">
        <SwitchPreferenceCompat
            app:key="inclue_adult"
            app:title="@string/title_include_adult"
            app:summaryOff="@string/include_adult_off"
            app:summaryOn="@string/include_adult_on" />
    </PreferenceCategory>

    <PreferenceCategory app:title="@string/header_title_module">
        <SwitchPreferenceCompat
            app:key="person"
            app:title="@string/title_person_module"
            app:summaryOff="@string/person_module_off"
            app:summaryOn="@string/person_module_on" />
    </PreferenceCategory>
</PreferenceScreen>